--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "description": "Describe",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
